# mln-backend-emulator

./: .gitignore  .hgignore  NetworkersSchema.md  README.md  apis.md  integrations.md  manage.py  notes.md  oauth.md  pyproject.toml  requirements.txt  setup.bat  users.txt
creation_lab/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
creation_lab/migrations/: 0001_initial.py
docs/: oauth-diagram.txt
mln/: admin.py  apps.py  signals.py  urls.py  views.py  webservice.py
mln/admin/: __init__.py  make_inline.py
mln/apis/: inbox_api.py  integrations.py  json.py  messages_api.py  modules_api.py  oauth_utils.py  users_api.py  utils.py  webhooks.py
mln/handlers/: friend.py  message.py  misc.py  module.py  module_settings.py  page.py  utils.py
mln/migrations/: 0001_initial.py  0002_DATA_xml_import.py  0002_enumfield.py  0003_moduleinfo_editor_type.py  0003_profile_is_networker.py  0004_concert_arcade_arrows.py  0004_profile_statements.py  0005_hop_arcade_grid.py  0005_null_blank.py  0006_DATA_startingstack.py  0006_validators.py  0007_messagebody_subject_length.py  0008_networker_message_trigger.py  0009_trigger_partial.py  0010_networker_friendship.py  0011_friendship_simplify.py  0012_about_me.py  0013_trigger_notes.py  0014_networker_friendship.py  0015_friendship.py  0016_modulesavenetworkerpic.py  0017_friendship_default.py  0019_unique_constraints.py  (+42 more)
mlnserver/: oauth.py  settings.py  urls.py  wsgi.py
static/: place content files in this folder.txt
ugc/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
ugc_base/: __init__.py
(+250 files in other folders)
